# claude-collaborator-mcp

./: .env.example  .gitignore  MANIFEST.in  README.md  pyproject.toml
docs/: CLAUDE.md.example  configuration.md
examples/simple-csharp/SimpleApp/: Program.cs  SimpleApp.csproj
examples/simple-csharp/SimpleLib/: Calculator.cs
src/claude_collaborator/: __init__.py  code_analyzer.py  config.py  glm_client.py  memory_auto.py  memory_context.py  memory_store.py  memory_vector.py  server.py  server_middleware.py
tests/: test_analyzer.py  test_glm_enrich.py  test_server_integration.py  test_vector_memory.py
